# revopspulse-modern-data-stack

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  dbt-ci.yml
dags/: revopspulse_daily_pipeline.py
dashboard/: metrics_snapshot.md
dbt/: dbt_project.yml  profiles.yml.example
dbt/macros/generic_tests/: amount_non_negative.sql  event_timestamp_not_future.sql  refund_not_greater_than_payment.sql  valid_subscription_period.sql
dbt/models/marts/: _marts_models.yml
dbt/models/marts/core/: dim_accounts.sql  dim_customers.sql
dbt/models/marts/data_quality/: mart_data_quality_summary.sql
dbt/models/marts/finance/: fact_payments.sql  mart_revenue_monthly.sql
dbt/models/marts/marketing/: mart_marketing_roi_monthly.sql
dbt/models/marts/product/: fact_product_events.sql  mart_product_usage_daily.sql
dbt/models/staging/: _raw_sources.yml
dbt/snapshots/: _snapshots.yml  subscription_snapshot.sql
docs/: assumptions.md  cost_estimate.md  data_dictionary.md  data_model.md  demo_script.md  incident_response.md  metric_definitions.md  runbook.md  tradeoffs.md
sql/init/: 001_create_source_schema.sql
sql/seed/: 002_seed_source_data.sql
src/api_mock/: mock_crm_api.py
src/generators/: generate_postgres_seed.py  generate_product_events.py
src/ingestion/: api_extractor.py  events_extractor.py  postgres_extractor.py  raw_json_loader.py
tests/unit/: test_events_extractor.py  test_product_events_generator.py  test_python_syntax.py  test_static_contracts.py
(+21 files in other folders)
