[project]
name = "revopspulse-modern-data-stack"
version = "0.1.0"
description = "Modern data stack project for SaaS revenue, retention and incentive analytics."
readme = "README.md"
requires-python = ">=3.12"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
